--- a/src/widgets/hero/hero-section.astro
+++ b/src/widgets/hero/hero-section.astro
@@ -1,6 +1,7 @@
 ---
 import Paragraph from "../../shared/ui/paragraph/paragraph.astro";
 import Button from "../../shared/ui/button/button.astro";
+import { Image } from "astro:assets";
 
 import BackgroundVideo from "/public/videos/video.mp4";
 
@@ -58,31 +59,35 @@ import LogoIcon from "/public/images/logo-icon-pc.svg";
         <div
             class="content max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] mx-auto flex flex-col items-center"
         >
-            <div class="lg:flex-grow"></div>
-            <h1
-                class="flex items-center flex-col mt-[228px] lg:flex-row lg:gap-8"
+            <div class="lg:flex-grow 4xl:flex-none"></div>
+            <div
+                class="flex items-center 4xl:justify-center w-full 4xl:h-full flex-col"
             >
-                <img
-                    src={WrapIcon.src}
-                    alt="Wrap"
-                    class="w-[240px] sm:w-[300px] md:w-[340px] lg:hidden flex"
+                <h1
+                    class="flex items-center flex-col mt-[228px] lg:flex-row lg:gap-y-8"
+                >
+                    <Image
+                        src={WrapIcon}
+                        alt="Wrap"
+                        class="w-[240px] sm:w-[300px] md:w-[340px] lg:hidden flex"
+                    />
+                    <Image
+                        src={StudioIcon}
+                        alt="Studio"
+                        class="w-[240px] sm:w-[300px] md:w-[340px] mt-4 lg:hidden flex"
+                    />
+                    <Image
+                        src={LogoIcon}
+                        alt="Logo Icon"
+                        class="hidden lg:flex"
+                    />
+                </h1>
+                <Paragraph
+                    variant="hero"
+                    text="Wrap Studio: защита вашего авто на годы. Полиуретановая пленка — броня от царапин, сколов и времени. Сохраняем идеальный вид, подчеркиваем стиль. Ваш автомобиль в надежных руках."
+                    className="mt-4 sm:mt-8 sm:w-[80%] md:w-[60%] lg:w-[75%] xl:w-[60%] 3xl:w-[45%] lg:mb-28 xl:mb-36 2xl:mb-48"
                 />
-                <img
-                    src={StudioIcon.src}
-                    alt="Studio"
-                    class="w-[240px] sm:w-[300px] md:w-[340px] mt-4 lg:hidden flex"
-                />
-                <img
-                    src={LogoIcon.src}
-                    alt="Logo Icon"
-                    class="hidden lg:flex"
-                />
-            </h1>
-            <Paragraph
-                variant="hero"
-                text="Wrap Studio: защита вашего авто на годы. Полиуретановая пленка — броня от царапин, сколов и времени. Сохраняем идеальный вид, подчеркиваем стиль. Ваш автомобиль в надежных руках."
-                className="mt-4 sm:mt-8 sm:w-[80%] md:w-[60%] lg:w-[75%] xl:w-[60%] lg:mb-28 xl:mb-36 2xl:mb-48"
-            />
+            </div>
             <Button
                 text={"Связаться с нами".toUpperCase()}
                 variant="link"
