--- a/src/widgets/contacts/contacts-section.astro
+++ b/src/widgets/contacts/contacts-section.astro
@@ -48,7 +48,7 @@ import contacts01 from "/public/images/contacts01.webp";
             <a
                 href="https://sparkstudio.kz/"
                 target="_blank"
-                class="font-gotham text-[20px] sm:text-[24px] font-[400] md:text-[28px] text-center text-primary mt-16 mb-8"
+                class="font-gotham text-[20px] sm:text-[24px] font-[400] md:text-[28px] text-center text-primary mt-16 mb-8 lg:mb-16"
                 >Developed by Spark Studio
             </a>
         </div>
@@ -56,6 +56,6 @@ import contacts01 from "/public/images/contacts01.webp";
     <Image
         src={contacts01}
         alt="Wheat"
-        class="absolute lg:flex hidden mx-auto -right-96 xl:-right-80 2xl:-right-96 5xl:-right-[30rem] 6xl:-right-[40rem] 7xl:-right-[45rem] bottom-0 3xl:bottom-20 4xl:bottom-10 xl:w-[900px] xl:h-[500px] 2xl:w-[1000px] 2xl:h-[600px] 3xl:w-[1200px] 3xl:h-[700px] 4xl:w-[1300px] 4xl:h-[800px]"
+        class="absolute lg:flex hidden mx-auto -right-72 xl:-right-80 2xl:-right-[22rem] 3xl:-right-[22rem] 5xl:-right-[26rem] 6xl:-right-[36rem] bottom-0 3xl:bottom-20 4xl:bottom-10 lg:w-[850px] lg:h-[450px] xl:w-[950px] xl:h-[500px] 2xl:w-[1000px] 2xl:h-[550px] 3xl:w-[1100px] 3xl:h-[600px] 4xl:w-[1200px] 4xl:h-[650px] 5xl:w-[1250px] 5xl:h-[670px]"
     />
 </section>
