--- a/src/widgets/hero/hero-section.astro
+++ b/src/widgets/hero/hero-section.astro
@@ -70,16 +70,19 @@ import LogoIcon from "/public/images/logo-icon-pc.svg";
                         src={WrapIcon}
                         alt="Wrap"
                         class="w-[240px] sm:w-[300px] md:w-[340px] lg:hidden flex"
+                        loading="eager"
                     />
                     <Image
                         src={StudioIcon}
                         alt="Studio"
                         class="w-[240px] sm:w-[300px] md:w-[340px] mt-4 lg:hidden flex"
+                        loading="eager"
                     />
                     <Image
                         src={LogoIcon}
                         alt="Logo Icon"
                         class="hidden lg:flex"
+                        loading="eager"
                     />
                 </h1>
                 <Paragraph
