--- a/src/widgets/price/price-section.astro
+++ b/src/widgets/price/price-section.astro
@@ -9,7 +9,7 @@ import { mockData } from "../../features/price/lib/mock-data";
     class="max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] flex items-center flex-col mx-auto mt-[64px] lg:mt-0 leading-none"
 >
     <span
-        class="hidden lg:flex justify-center items-center lg:text-[260px] xl:text-[340px] 2xl:text-[420px] font-walk-da-walk font-[400] text-[#50C87805] z-0 uppercase"
+        class="hidden select-none lg:flex justify-center items-center lg:text-[260px] xl:text-[340px] 2xl:text-[420px] font-walk-da-walk font-[400] text-[#50C87809] z-0 uppercase mb-12"
         style={{ fontFamily: "Walk Da Walk One, sans-serif" }}
     >
         detailing
