--- a/src/features/price/ui/price-card/price-card.astro
+++ b/src/features/price/ui/price-card/price-card.astro
@@ -17,14 +17,14 @@ const { title, price, descriptors, isExtended } = Astro.props;
     class={`${isExtended ? "flex flex-row items-start justify-between h-full" : "flex-col flex items-start lg:h-full min-h-[610px]"} w-full p-[20px] sm:p-[24px] md:p-[28px] lg:p-[20px] xl:p-[24px] 2xl:p-[28px] border border-secondary-dark rounded-[12px] relative group hover:shadow-[0px_4px_128px_0px_#50C87840] transition-shadow duration-300 ease-in-out hover:border-primary`}
 >
     <span
-        class={`absolute inset-0 flex items-center justify-center ${isExtended ? "xl:text-[188px] 2xl:text-[208px]" : "text-[128px] sm:text-[148px] md:text-[148px] lg:text-[128px] 2xl:text-[168px] leading-[128px] sm:leading-[148px] md:leading-[168px] lg:leading-[128px] 2xl:leading-[168px]"} font-[400] text-[#50C87808] z-0 text-center`}
+        class={`absolute inset-0 flex items-center justify-center select-none ${isExtended ? "xl:text-[188px] 2xl:text-[208px]" : "text-[128px] sm:text-[148px] md:text-[148px] lg:text-[128px] 2xl:text-[168px] leading-[128px] sm:leading-[148px] md:leading-[168px] lg:leading-[128px] 2xl:leading-[168px]"} font-[400] text-[#50C87808] z-0 text-center`}
         style={{ fontFamily: "Walk Da Walk One, sans-serif" }}
     >
         WRAP STUDIO
     </span>
     <div>
         <span
-            class={`text-white font-gotham font-[500] ${isExtended ? "xl:text-[38px] 2xl:text-[48px]" : "text-[22px] sm:text-[28px] md:text-[32px] lg:text-[22px] xl:text-[24px] 2xl:text-[32px]"} leading-[37px] mb-4 group group-hover:text-primary transition-colors duration-300 ease-in-out`}
+            class={`text-white font-gotham font-[500] ${isExtended ? "xl:text-[38px] 2xl:text-[48px]" : "text-[22px] sm:text-[28px] md:text-[32px] lg:text-[22px] xl:text-[24px] 2xl:text-[32px]"} leading-[37px] mb-4 group-hover:text-primary transition-colors duration-300 ease-in-out`}
         >
             {`${title}`.toUpperCase()}
         </span>
@@ -39,6 +39,7 @@ const { title, price, descriptors, isExtended } = Astro.props;
                             src={TablerWheelIcon.src}
                             alt="Tabler Wheel Icon"
                             class="self-start shrink-0"
+                            loading="lazy"
                         />
                         <span class="text-white font-mont-alter font-[600] text-[16px] sm:text-[18px] md:text-[20px] lg:text-[16px] 2xl:text-[20px] leading-[37px] -mt-2 whitespace-pre-line">
                             {descriptor}
