feat: inner links

--- a/src/widgets/about/about-section.astro
+++ b/src/widgets/about/about-section.astro
@@ -10,6 +10,7 @@ import { aboutTabs } from "../../features/about/model/about-tabs";
 
 <section
     class="relative max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] flex items-center flex-col mx-auto mt-[64px]"
+    id="about"
 >
     <div
         class="flex lg:flex-row-reverse flex-col items-center lg:items-start lg:justify-between w-full lg:mt-8 lg:mb-[64px]"
