--- a/src/widgets/portfolio/portfolio-section.astro
+++ b/src/widgets/portfolio/portfolio-section.astro
@@ -9,6 +9,7 @@ import { portfolioCards } from "../../features/portfolio/lib/mock-data";
 
 <section
     class="max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] flex items-center flex-col mx-auto mt-[64px] lg:mt-[128px]"
+    id="portfolio"
 >
     <div
         class="lg:flex lg:flex-row-reverse lg:justify-between lg:items-start w-full flex items-center justify-center flex-col"
