--- a/src/widgets/price/price-section.astro
+++ b/src/widgets/price/price-section.astro
@@ -7,6 +7,7 @@ import { mockData } from "../../features/price/lib/mock-data";
 
 <section
     class="max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] flex items-center flex-col mx-auto mt-[64px] lg:mt-0 leading-none"
+    id="price"
 >
     <span
         class="hidden select-none lg:flex justify-center items-center lg:text-[260px] xl:text-[340px] 2xl:text-[420px] font-walk-da-walk font-[400] text-[#50C87809] z-0 uppercase mb-12"
