--- a/src/widgets/services/services-section.astro
+++ b/src/widgets/services/services-section.astro
@@ -10,6 +10,7 @@ import BigServiceCard from "@/features/services/ui/big-service-card/big-service-
 
 <section
     class="max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] flex items-center flex-col mx-auto pt-[64px]"
+    id="services"
 >
     <div
         class="flex lg:flex-row flex-col items-center lg:items-start lg:justify-between w-full lg:mt-8 lg:mb-8"
